// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`output golden — table snapshots > adaptive-ashrae produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "adaptive",
      "layoutTitle": "Adaptive ASHRAE Adaptive",
      "profileKind": "compliance",
      "traceCount": 6,
      "traceNames": [
        "too-cool",
        "80% occupants",
        "90% occupants",
        "80% occupants",
        "too-warm",
        "Input 1",
      ],
      "xAxisTitle": "Prevailing mean outdoor temperature (°C)",
      "yAxisTitle": "Operative temperature (°C)",
    },
  ],
  "modelId": "adaptive-ashrae",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "20.5 ~ 27.5 °C",
            "text": "80% occupants",
          },
        ],
        "title": "80% occupants",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "21.5 ~ 26.5 °C",
            "text": "90% occupants",
          },
        ],
        "title": "90% occupants",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > adaptive-en produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "adaptive",
      "layoutTitle": "Adaptive EN Adaptive",
      "profileKind": "compliance",
      "traceCount": 8,
      "traceNames": [
        "too-cool",
        "Category III",
        "Category II",
        "Category I",
        "Category II",
        "Category III",
        "too-warm",
        "Input 1",
      ],
      "xAxisTitle": "Running mean outdoor temperature (°C)",
      "yAxisTitle": "Operative temperature (°C)",
    },
  ],
  "modelId": "adaptive-en",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "22.4 ~ 27.4 °C",
            "text": "Category I",
          },
        ],
        "title": "Category I",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "21.4 ~ 28.4 °C",
            "text": "Category II",
          },
        ],
        "title": "Category II",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "20.4 ~ 29.4 °C",
            "text": "Category III",
          },
        ],
        "title": "Category III",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > heat-index produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "dynamic",
      "layoutTitle": "Heat Index Dynamic — Heat Index",
      "profileKind": "explore",
      "traceCount": 6,
      "traceNames": [
        "Heat Index bands: No Risk",
        "Heat Index bands: Caution",
        "Heat Index bands: Extreme Caution",
        "Heat Index bands: Danger",
        "Heat Index bands: Extreme Danger",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "heat-index",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#475569",
            "subtext": "No Risk",
            "text": "26.6 °C",
          },
        ],
        "title": "Heat Index",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > humidex produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "dynamic",
      "layoutTitle": "Humidex Dynamic — Humidex",
      "profileKind": "explore",
      "traceCount": 7,
      "traceNames": [
        "Humidex bands: Little or no discomfort",
        "Humidex bands: Noticeable discomfort",
        "Humidex bands: Evident discomfort",
        "Humidex bands: Intense discomfort; avoid exertion",
        "Humidex bands: Dangerous discomfort",
        "Humidex bands: Heat stroke probable",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "humidex",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#475569",
            "subtext": "Little or no discomfort",
            "text": "29.8",
          },
        ],
        "title": "Humidex",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > phs-2023 produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "body-temperature",
      "layoutTitle": "PHS exposure history",
      "profileKind": "compliance",
      "traceCount": 4,
      "traceNames": [
        "Rectal temperature",
        "Core temperature",
        "Maximum rectal temperature",
        "Input 1",
      ],
      "xAxisTitle": "Time (hours)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "body-temperature",
      "layoutTitle": "PHS exposure history",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Rectal temperature",
        "Core temperature",
        "Editable rectal-temperature threshold",
        "Input 1",
      ],
      "xAxisTitle": "Time (hours)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "Predicted Heat Strain (PHS) Index Dynamic — Limiting exposure time",
      "profileKind": "compliance",
      "traceCount": 3,
      "traceNames": [
        "Limiting exposure time bands: < 480",
        "Limiting exposure time bands: >= 480",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "Predicted Heat Strain (PHS) Index Dynamic — Rectal temperature after 8 h",
      "profileKind": "explore",
      "traceCount": 3,
      "traceNames": [
        "Rectal temperature after 8 h bands: < 38",
        "Rectal temperature after 8 h bands: >= 38",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "phs-2023",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "text": "8 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Rectal-temperature exposure limit",
      },
      {
        "cells": [
          {
            "text": "8 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Water-loss exposure limit",
      },
      {
        "cells": [
          {
            "subtext": "No limit reached before 8 h",
            "text": "8 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Earliest limiting criterion",
      },
      {
        "cells": [
          {
            "text": "37.05 °C",
          },
        ],
        "group": "End-of-exposure state",
        "title": "Rectal temperature after 8 h",
      },
      {
        "cells": [
          {
            "text": "0.3 kg",
          },
        ],
        "group": "End-of-exposure state",
        "title": "Predicted water loss after 8 h",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > pmv-ashrae produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "psychrometric",
      "layoutTitle": "PMV/PPD (ASHRAE 55) Psychrometric — PMV",
      "profileKind": "compliance",
      "traceCount": 16,
      "traceNames": [
        "Supersaturated region mask",
        "PMV bands: fail-fill",
        "PMV bands: acceptable",
        "PMV bands: fail-fill (warm)",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1 comfort zone",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "psychrometric",
      "layoutTitle": "PMV/PPD (ASHRAE 55) Psychrometric — PMV",
      "profileKind": "explore",
      "traceCount": 16,
      "traceNames": [
        "Supersaturated region mask",
        "PMV bands: fail-fill",
        "PMV bands: acceptable",
        "PMV bands: fail-fill (warm)",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1 comfort zone",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "PMV/PPD (ASHRAE 55) Dynamic — PMV",
      "profileKind": "compliance",
      "traceCount": 4,
      "traceNames": [
        "PMV bands: fail-fill",
        "PMV bands: acceptable",
        "PMV bands: fail-fill (warm)",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "PMV/PPD (ASHRAE 55) Dynamic — PMV",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "PMV bands: fail-fill",
        "PMV bands: acceptable",
        "PMV bands: fail-fill (warm)",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "compliance",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "explore",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "set",
      "layoutTitle": "SET outputs",
      "profileKind": "compliance",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "set",
      "layoutTitle": "SET outputs",
      "profileKind": "explore",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
  ],
  "modelId": "pmv-ashrae",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "text": "0.24",
          },
        ],
        "title": "PMV",
      },
      {
        "cells": [
          {
            "color": "#475569",
            "text": "Neutral",
          },
        ],
        "title": "Zone",
      },
      {
        "cells": [
          {
            "text": "6.2%",
          },
        ],
        "title": "PPD",
      },
      {
        "cells": [
          {
            "text": "93.8%",
          },
        ],
        "title": "Acceptability",
      },
      {
        "cells": [
          {
            "text": "24.8 °C",
          },
        ],
        "title": "SET",
      },
      {
        "cells": [
          {
            "text": "0 °C",
          },
        ],
        "title": "Cooling effect",
      },
      {
        "cells": [
          {
            "text": "0.1 m/s",
          },
        ],
        "title": "Relative air speed",
      },
      {
        "cells": [
          {
            "text": "0.5 clo",
          },
        ],
        "title": "Dynamic clothing",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > pmv-iso produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "psychrometric",
      "layoutTitle": "PMV/PPD (ISO 7730) Psychrometric — PMV",
      "profileKind": "compliance",
      "traceCount": 20,
      "traceNames": [
        "Supersaturated region mask",
        "PMV bands: Cold",
        "PMV bands: Cool",
        "PMV bands: Slightly Cool",
        "PMV bands: Neutral",
        "PMV bands: Slightly Warm",
        "PMV bands: Warm",
        "PMV bands: Hot",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1 comfort zone",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "psychrometric",
      "layoutTitle": "PMV/PPD (ISO 7730) Psychrometric — PMV",
      "profileKind": "explore",
      "traceCount": 20,
      "traceNames": [
        "Supersaturated region mask",
        "PMV bands: Cold",
        "PMV bands: Cool",
        "PMV bands: Slightly Cool",
        "PMV bands: Neutral",
        "PMV bands: Slightly Warm",
        "PMV bands: Warm",
        "PMV bands: Hot",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1 comfort zone",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "PMV/PPD (ISO 7730) Dynamic — PMV",
      "profileKind": "compliance",
      "traceCount": 8,
      "traceNames": [
        "PMV bands: Cold",
        "PMV bands: Cool",
        "PMV bands: Slightly Cool",
        "PMV bands: Neutral",
        "PMV bands: Slightly Warm",
        "PMV bands: Warm",
        "PMV bands: Hot",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "PMV/PPD (ISO 7730) Dynamic — PMV",
      "profileKind": "explore",
      "traceCount": 8,
      "traceNames": [
        "PMV bands: Cold",
        "PMV bands: Cool",
        "PMV bands: Slightly Cool",
        "PMV bands: Neutral",
        "PMV bands: Slightly Warm",
        "PMV bands: Warm",
        "PMV bands: Hot",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "compliance",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "explore",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "set",
      "layoutTitle": "SET outputs",
      "profileKind": "compliance",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "set",
      "layoutTitle": "SET outputs",
      "profileKind": "explore",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
  ],
  "modelId": "pmv-iso",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "text": "0.24",
          },
        ],
        "title": "PMV",
      },
      {
        "cells": [
          {
            "color": "#475569",
            "text": "Neutral",
          },
        ],
        "title": "Zone",
      },
      {
        "cells": [
          {
            "text": "6.2%",
          },
        ],
        "title": "PPD",
      },
      {
        "cells": [
          {
            "text": "93.8%",
          },
        ],
        "title": "Acceptability",
      },
      {
        "cells": [
          {
            "text": "24.8 °C",
          },
        ],
        "title": "SET",
      },
      {
        "cells": [
          {
            "text": "0 °C",
          },
        ],
        "title": "Cooling effect",
      },
      {
        "cells": [
          {
            "text": "0.1 m/s",
          },
        ],
        "title": "Relative air speed",
      },
      {
        "cells": [
          {
            "text": "0.5 clo",
          },
        ],
        "title": "Dynamic clothing",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > utci produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "utci",
      "layoutTitle": "UTCI",
      "profileKind": "explore",
      "traceCount": 3,
      "traceNames": [
        "UTCI bands",
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "UTCI (°C)",
      "yAxisTitle": "",
    },
    {
      "instanceId": "dynamic",
      "layoutTitle": "Universal Thermal Climate Index (UTCI) Dynamic — UTCI",
      "profileKind": "explore",
      "traceCount": 11,
      "traceNames": [
        "UTCI bands: Extreme Cold Stress",
        "UTCI bands: Very Strong Cold Stress",
        "UTCI bands: Strong Cold Stress",
        "UTCI bands: Moderate Cold Stress",
        "UTCI bands: Slight Cold Stress",
        "UTCI bands: No Thermal Stress",
        "UTCI bands: Moderate Heat Stress",
        "UTCI bands: Strong Heat Stress",
        "UTCI bands: Very Strong Heat Stress",
        "UTCI bands: Extreme Heat Stress",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "utci",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "text": "25.5 °C",
          },
        ],
        "title": "UTCI",
      },
      {
        "cells": [
          {
            "color": "#059669",
            "text": "No Thermal Stress",
          },
        ],
        "title": "Stress Category",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > wind-chill produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "dynamic",
      "layoutTitle": "Wind chill index Dynamic — Wind chill index",
      "profileKind": "explore",
      "traceCount": 1,
      "traceNames": [
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Wind speed (m/s)",
    },
  ],
  "modelId": "wind-chill",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "text": "972.7 W/m²",
          },
        ],
        "title": "Wind chill index",
      },
      {
        "cells": [
          {
            "text": "-11.9 °C",
          },
        ],
        "title": "wct",
      },
    ],
  },
}
`;
